<resources>
    <string name="app_name">Pocket Memes</string>
    <string name="search_meme">Pesquisar memes</string>
    <string name="search_web">Pesquisar na web</string>
    <string name="group_name">Nome do grupo</string>
    <string name="new_group_item">novo grupo</string>
    <string name="group_exists">Já existe um grupo com este nome!</string>
    <string name="select_icon">Selecione um ícone!</string>
    <string name="enter_group_name">Informe o nome do grupo!</string>
    <string name="search_result">resultado da pesquisa</string>
    <string name="new_meme">Novo Meme</string>

    <string name="file_saved">Arquivo %s salvo!</string>
    <string name="file_not_saved">Falha ao salvar arquivo!</string>
    <string name="meme_name">Nome do meme</string>
    <string name="tags_hint">Palavras chave separadas por vírgula</string>
    <string name="top_text">Texto superior</string>
    <string name="middle_text">Texto central</string>
    <string name="bottom_text">Texto inferior</string>
    <string name="new_meme_saved">Novo meme salvo!</string>
    <string name="meme_saved">Meme salvo!</string>
    <string name="order_name">Ordenar por nome</string>
    <string name="order_newest">Mais novo</string>
    <string name="order_oldest">Mais velho</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="see_meme">Ver meme</string>
    <string name="sharing_title">Compartilhe seu meme</string>
    <string name="back">Voltar</string>
    <string name="ok">OK</string>
    <string name="meme_image">Imagem do meme</string>
    <string name="edit">Editar</string>
    <string name="share">Compartilhar</string>
    <string name="new_group">Novo Grupo</string>
    <string name="selected_icon">Ícone selecionado</string>
    <string name="search">Procurar</string>
    <string name="clear">Limpar</string>
    <string name="icon">ícone</string>
    <string name="groups">Grupos</string>
    <string name="selected_group">Grupo selecionado</string>
    <string name="clear_group">Limpar grupo selecionado</string>
    <string name="file_not_found">Arquivo não encontrado!</string>
    <string name="tags_labrl">Palavras chave</string>
    <string name="pocket_meme_widget">Pocket Meme Widget</string>
    <string name="no_meme_saved">Nenhum Meme salvo!</string>

</resources>
