<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_casino"
            android:tint="@color/font_creator_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/font_creator_white" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/font_creator_white"
            android:contentDescription="@string/pocket_meme_widget"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/widget_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/no_meme_saved"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>