<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:elevation="@dimen/menu_elevation">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:id="@+id/main_toolbar"
            android:visibility="visible">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/menu_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/menu_margin"
                    android:gravity="center_vertical"
                    android:text="@string/new_group"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toEndOf="@+id/menu_back" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_check_24dp"
                    android:id="@+id/menu_ok"
                    android:layout_marginEnd="@dimen/menu_margin_end"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/ok" />


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/minimum_pad"
            android:layout_marginStart="@dimen/minimum_pad"
            android:layout_marginTop="@dimen/extra_pad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/normal_pad"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/et_newgroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_newgroup"
            app:layout_constraintVertical_bias="1.0"
            tools:src="@drawable/ic_whatshot"
            android:contentDescription="@string/selected_icon" />

        <EditText
            android:id="@+id/et_newgroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_pad"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/extra_pad"
            android:lines="1"
            android:hint="@string/group_name"
            android:textAllCaps="false"
            android:maxLines="1"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_icons" />

    </android.support.constraint.ConstraintLayout>



</android.support.design.widget.CoordinatorLayout>