<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:elevation="@dimen/menu_elevation"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorSharePrimary"
            android:visibility="visible">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/menu_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_arrow_24dp"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/menu_margin"
                    android:gravity="center_vertical"
                    android:text="@string/see_meme"
                    android:textColor="@android:color/white"
                    android:textSize="26sp"
                    app:layout_constraintStart_toEndOf="@+id/menu_back" />


                <ImageView
                    android:id="@+id/button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/menu_margin_end"
                    android:contentDescription="@string/edit"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent" />


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <ImageView
                android:id="@+id/image_meme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/normal_pad"
                android:layout_marginTop="@dimen/normal_pad"
                android:layout_marginEnd="@dimen/normal_pad"
                android:layout_marginBottom="@dimen/normal_pad"
                android:contentDescription="@string/meme_image"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:textSize="@dimen/meme_name_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="Nome do meme" />

            <TextView
                android:id="@+id/textView_tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="@+id/textView_name"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView_name"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="palavras, chaves" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_groups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_pad"
                android:layout_marginTop="@dimen/normal_pad"
                android:layout_marginEnd="@dimen/normal_pad"
                android:layout_marginBottom="@dimen/normal_pad"
                android:foregroundGravity="top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView_tags"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_tags"
                app:layout_constraintTop_toBottomOf="@+id/textView_tags"
                app:layout_constraintVertical_bias="0.0" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".45" />

            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="@dimen/fab_size"
                android:layout_height="@dimen/fab_size"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/button_share"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/meme_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tags_labrl"
                app:layout_constraintEnd_toEndOf="@+id/textView_name"
                app:layout_constraintStart_toStartOf="@+id/textView_name"
                app:layout_constraintTop_toBottomOf="@+id/textView_name" />

        </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>